@@ -1,5 +1,8 @@
 NEWS
 
+2004-11-23 Anders Backman:
+Added contructor to Sample taking raw data as parameter directly.
+
 2004-11-10 Anders Backman:
 Major revision. Added referenced (smart) pointers to clean up the 
 responsibility of new/delete policy. This means that it is now not possible to create any instances of 
